fix: button font-weight, spacing scale style

--- a/shared-components/src/components/button/button-shared.scss
+++ b/shared-components/src/components/button/button-shared.scss
@@ -48,7 +48,7 @@
   display: flex;
   transition: 125ms ease-in-out;
   transition-property: color, box-shadow, background-color;
-  font-weight: bold;
+  font-weight: 600;
 
   &--primary {
     color: var(--common-button--primary-color);
